--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ a{text-decoration: none;}
 /* header */
 #header{
     width: 100%; height: 80px;
-    background-color: rgba(238, 238, 238, 0.75);
-    border-bottom: 1px solid #eee;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-bottom: 1px solid #ddd;
 
     position: fixed;
     top: 0; left: 0;
