--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ a{text-decoration: none;}
 
 
 /* main_banner */
-#main_banner{width: 100%; height: 100vh; background-color: #aaf;}
+#main_banner{width: 100%; height: 100vh;}
 #main_banner .img_part{
     width: 100%; height: 100%;
     background-size: cover;
