--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ section #intro .intro_cont .wrap .box .txt_part p{
 }
 #stores .cont_wrap .contBox:nth-child(3){
     width: calc(100% / 12 * 7 - 20px);
-    background-color: #fde;
+    /* background-color: #fde; */
 }
 
 #stores .cont_wrap .contBox .img_part{overflow: hidden;}
